--- a/SemantixTestWeb/src/App.css
+++ b/SemantixTestWeb/src/App.css
@@ -3,23 +3,29 @@
 }
 
 .App-header {
+  display: flex;
   width: 100%;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
   color: #fff;
   font-size: large;
+  min-height: 7vh;
+  padding: auto;
+  font-size: calc(10px + 2vmin);
 }
 .App-conteiner {
   text-align: center;
 }
 
 .App-conteiner-header {
-  min-height: 100vh;
+  min-height: 93vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  font-size: calc(10px + 1vmin);
   color: white;
+  flex-wrap: wrap;
+  /* gap: 12px; */
 }
 
 .App-link {
